# automation

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.github/workflows/: precommit.yml  prepare-release.yml  tests.yml  trigger-deploy-preview.yml
automation/: app.py  auth.py  config.py  constants.py  db.py  dispatcher.py  event_router.py  execution.py  logger.py  models.py  preset_router.py  router.py  schemas.py  trigger_matcher.py  watchdog.py  webhook_router.py
automation/backends/: __init__.py  base.py  cloud.py  local.py
automation/event_schemas/: __init__.py  custom.py  detection.py  github.py
automation/presets/plugin/: sdk_main.py  setup.sh
automation/presets/prompt/: sdk_main.py  setup.sh
automation/storage/: factory.py  file_store.py  google_cloud.py  s3.py
automation/utils/: __init__.py  agent_server.py  run.py  sandbox.py  webhook.py
containers/: Dockerfile
frontend/: .env.example  .eslintrc  .gitignore  README.md  package-lock.json  package.json  playwright.config.ts  react-router.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/scripts/: check-translation-completeness.cjs  dev-proxy.mjs  make-i18n-translations.cjs
frontend/src/: entry.client.tsx  index.css  query-client-config.ts  root.tsx  routes.ts  tailwind.css
frontend/src/__tests__/api/: automation-service.test.ts
frontend/src/__tests__/components/automations/: automation-card.test.tsx  automation-group.test.tsx  delete-confirmation-modal.test.tsx  empty-state.test.tsx  error-state.test.tsx  kebab-menu.test.tsx  metadata-chip.test.tsx  permission-gating.test.tsx  search-input.test.tsx  toggle-switch.test.tsx
frontend/src/__tests__/components/automations/detail/: configuration-section.test.tsx  detail-header.test.tsx
frontend/src/__tests__/hooks/: use-language-sync.test.ts
frontend/src/__tests__/routes/: automation-detail.test.tsx  automations-list.test.tsx
frontend/src/api/: automation-service.ts  axios-clients.ts
frontend/src/components/: error-boundary.tsx
frontend/src/components/automations/: automation-card.tsx  automation-group.tsx  delete-confirmation-modal.tsx  empty-state.tsx  error-state.tsx  kebab-menu.tsx  search-input.tsx
frontend/src/components/automations/detail/: detail-header.tsx
frontend/src/hooks/: use-automations.ts  use-cross-tab-state.ts  use-language-sync.ts
frontend/src/i18n/: index.ts  translation.json
frontend/src/icons/: svg.d.ts
frontend/src/mocks/: auth-handlers.ts  automation-handlers.ts  automations.mock.ts  handlers.ts
frontend/src/routes/: automation-detail.tsx  automations-list.tsx  root-layout.tsx
frontend/src/types/: automation.ts  user.ts
frontend/src/utils/: custom-toast-handlers.tsx  local-storage.ts  toast-duration.ts
migrations/: env.py
migrations/versions/: 003_event_triggers.py  004_add_prompt_column.py  005_add_bash_command_id.py
openhands/automation/: __init__.py  app.py  auth.py  config.py  constants.py  db.py  dispatcher.py  event_router.py  exceptions.py  execution.py  filter_eval.py  logger.py  models.py  preset_router.py  router.py  scheduler.py  schemas.py  trigger_matcher.py  uploads.py  watchdog.py  webhook_router.py
openhands/automation/backends/: __init__.py  base.py  cloud.py  local.py
openhands/automation/event_schemas/: __init__.py  bitbucket_data_center.py  custom.py  detection.py  github.py  jira_dc.py
openhands/automation/presets/: __init__.py
openhands/automation/presets/plugin/: sdk_main.py  setup.sh
openhands/automation/presets/prompt/: sdk_main.py
openhands/automation/storage/: __init__.py  factory.py  google_cloud.py  local.py  s3.py
openhands/automation/utils/: __init__.py  agent_server.py  api_key.py  cron.py  log_context.py  run.py  sandbox.py  tarball_validation.py  time.py  webhook.py
scripts/: test_automation.py
scripts/test_tarball/: setup.sh
tests/: conftest.py  test_auth.py  test_backends.py  test_config.py  test_db.py  test_disable_automation.py  test_dispatcher.py  test_event_router.py  test_event_schemas.py  test_execution.py  test_filter_eval.py  test_frontend.py  test_health.py  test_local_mode.py  test_preset_router.py  test_router.py  test_scheduler.py  test_storage.py  test_storage_integration.py  test_storage_local.py  test_storage_s3.py  test_storage_s3_integration.py  test_tarball_validation.py  test_uploads.py  test_uploads_integration.py  test_watchdog.py  test_webhook_router.py  test_webhook_utils.py
tests/unit/: test_automation.py
