[project]
name = "openhands-automation"
version = "0.1.0"
description = "OpenHands automation service"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["automation"]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright[nodejs]>=1.1.405",
    "pytest>=8.4.1",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.10",
    "pycodestyle>=2.12.0",
    "pytest-asyncio>=1.1.0",
    "pytest-xdist>=3.6.0",
    "pytest-timeout>=2.4.0",
]

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (includes F841: unused-variable)
    "I",    # isort
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
]
extend-select = ["B006", "B008", "B039", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
]

[tool.ruff.lint.isort]
known-first-party = ["automation"]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2

# Pytest configuration
[tool.pytest.ini_options]
testpaths = [
    "tests"
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

# Pyright configuration
[tool.pyright]
include = [
    "automation",
    "tests",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
useLibraryCodeForTypes = true
typeCheckingMode = "standard"
