[project]
name = "openhands-automation"
version = "1.0.0a4"
description = "OpenHands automation service"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "aiosqlite>=0.20",
  "alembic>=1.14",
  "asyncpg>=0.30",
  "boto3>=1.35",
  "cachetools>=7.0.5",
  "cloud-sql-python-connector[asyncpg]>=1.16",
  "croniter>=2",
  "fastapi>=0.115",
  "google-cloud-storage>=2.18",
  "httpx>=0.27",
  "jmespath>=1.0",
  "openhands-sdk==1.22.1",
  "openhands-workspace==1.22.1",
  "pg8000>=1.31",
  "pydantic>=2",
  "pydantic-settings>=2",
  "python-json-logger>=3",
  "sqlalchemy[asyncio]>=2",
  "tenacity>=9.1.4",
  "uvicorn[standard]>=0.30",
]

[build-system]
build-backend = "hatchling.build"
requires = [
  "hatchling",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["openhands"]

[tool.hatch.build.targets.wheel.force-include]
# Include migrations folder inside the automation package
# This allows alembic migrations to run when installed via pip/uvx
"migrations" = "openhands/automation/migrations"

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright[nodejs]>=1.1.405",
    "pytest>=8.4.1",
    "pytest-cov>=5.0.0",
    "ruff>=0.12.10",
    "pycodestyle>=2.12.0",
    "pytest-asyncio>=1.1.0",
    "pytest-xdist>=3.6.0",
    "pytest-timeout>=2.4.0",
    "testcontainers[postgres,minio]>=4.10.0",
]

# Ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 88
extend-exclude = ["openhands/automation/presets"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes (includes F841: unused-variable)
    "I",    # isort
    "UP",   # pyupgrade
    "ARG",  # flake8-unused-arguments
]
extend-select = ["B006", "B008", "B039", "RUF012"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
]

[tool.ruff.lint.isort]
known-first-party = ["openhands"]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2

# Pytest configuration

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

# Pyright configuration

[tool.pyright]
include = [
    "openhands/automation",
    "tests",
]
exclude = [
    "scripts/test_tarball",
    "openhands/automation/presets",
]
venvPath = "."
venv = ".venv"
pythonVersion = "3.12"
useLibraryCodeForTypes = true
typeCheckingMode = "standard"
